spinnaker/ingress-tls-spinnaker-gate.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spinnaker-gate-gebi-link
  namespace: spinnaker
  annotations:
    kubernetes.io/ingress.class: kong
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - secretName: spinnaker-gate-gebi-link
    hosts:
    - spinnaker-gate.gebi.link
  rules:
  - host: spinnaker-gate.gebi.link
    http:
      paths:
      - path: /
        backend:
          serviceName: spin-gate
          servicePort: 8084
