spinnaker/ingress-tls-spinnaker.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spinnaker-gebi-link
  namespace: spinnaker
  annotations:
    kubernetes.io/ingress.class: kong
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - secretName: spinnaker-gebi-link
    hosts:
    - spinnaker.gebi.link
  rules:
  - host: spinnaker.gebi.link
    http:
      paths:
      - path: /
        backend:
          serviceName: spin-deck
          servicePort: 9000
